--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,10 +3,11 @@
         "browser": true,
         "es2021": true
     },
+    "parser": "vue-eslint-parser",
     "extends": [
-        "eslint:recommended",
-        "plugin:vue/essential",
-        "plugin:@typescript-eslint/recommended"
+        "plugin:@typescript-eslint/recommended",
+        "plugin:vue/vue3-recommended",
+        "@vue/typescript/recommended"
     ],
     "parserOptions": {
         "ecmaVersion": "latest",
