--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve": "vite preview",
+    "lint": "eslint --fix --ext .js,vue src/"
   },
   "dependencies": {
     "vue": "^3.2.25"
@@ -13,8 +15,10 @@
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "@vitejs/plugin-vue": "^2.0.0",
+    "@vue/eslint-config-typescript": "^10.0.0",
     "eslint": "^8.8.0",
     "eslint-plugin-vue": "^8.4.1",
+    "husky": "^7.0.4",
     "sass": "^1.49.7",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
