deps: vue语法糖自动导入|解决setup无法写name问题

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,8 @@
     "extends": [
         "plugin:@typescript-eslint/recommended",
         "plugin:vue/vue3-recommended",
-        "@vue/typescript/recommended"
+        "@vue/typescript/recommended",
+        "vue-global-api"
     ],
     "parserOptions": {
         "ecmaVersion": "latest",
