--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "husky": "^7.0.4",
     "sass": "^1.49.7",
     "typescript": "^4.4.4",
+    "unplugin-auto-import": "^0.5.11",
     "vite": "^2.7.2",
+    "vite-plugin-vue-setup-extend": "^0.4.0",
+    "vue-global-api": "^0.4.1",
     "vue-tsc": "^0.29.8"
   }
 }
