--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint --fix --ext .js,vue src/"
   },
   "dependencies": {
+    "async-validator": "^4.0.7",
+    "mitt": "^3.0.0",
     "vue": "^3.2.25"
   },
   "devDependencies": {
